<resources>
    <string name="app_name">Login</string>
    <string name="name" />
    <string name="nextButton" />
    <string name="nextbtn">Nextbtn</string>
    <string name="btnclose">BtnClose</string>
    <string name="message">Message</string>
    <string name="phone">Phone</string>
    <string name="BackBtn" />
    <string name="backbtnnn">Backbtnnn</string>
    <string name="writeshared">Write-shared</string>
    <string name="readShared">ReadShared</string>
    <string name="writeInStorage">WriteInStorage</string>
    <string name="readIS">ReadInStorgae</string>
    <string name="sqlWrite">SQLwrite</string>
    <string name="sqlRead">SQLread</string>
</resources>