<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/btnWIS_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="78dp"
        android:text="@string/writeInStorage"
        app:layout_constraintEnd_toStartOf="@+id/btnRIS_ID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWSP_ID" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="91dp"
        android:layout_height="41dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="44dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="186dp"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0111111111111111111" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="19dp"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtMsg"
        android:layout_width="177dp"
        android:layout_height="23dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        tools:text="msg" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:onClick="onBack"
        android:text="@string/backbtnnn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMsg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/btnWSP_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="48dp"
        android:text="@string/writeshared"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <Button
        android:id="@+id/btnRshP_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="44dp"
        android:text="@string/readShared"
        app:layout_constraintStart_toEndOf="@+id/btnWSP_ID"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <Button
        android:id="@+id/btnRIS_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/readIS"
        app:layout_constraintStart_toEndOf="@+id/btnWIS_ID"
        app:layout_constraintTop_toBottomOf="@+id/btnRshP_ID" />

    <Button
        android:id="@+id/SQLW_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="31dp"
        android:text="@string/sqlWrite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWIS_ID" />

    <Button
        android:id="@+id/SqlR_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="33dp"
        android:text="@string/sqlRead"
        app:layout_constraintBottom_toBottomOf="@+id/SQLW_ID"
        app:layout_constraintStart_toEndOf="@+id/SQLW_ID"
        app:layout_constraintTop_toBottomOf="@+id/btnRIS_ID" />

</androidx.constraintlayout.widget.ConstraintLayout>