<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/msg"
        android:layout_width="126dp"
        android:layout_height="41dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="46dp"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="72dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msgedit" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="113dp"
        android:text="@string/nextbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editphone" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="113dp"
        android:onClick="onClose"
        android:text="@string/btnclose"
        app:layout_constraintStart_toEndOf="@+id/nextBtn"
        app:layout_constraintTop_toBottomOf="@+id/editphone" />

    <EditText
        android:id="@+id/msgedit"
        android:layout_width="209dp"
        android:layout_height="79dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg" />

    <EditText
        android:id="@+id/editphone"
        android:layout_width="210dp"
        android:layout_height="71dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />
</androidx.constraintlayout.widget.ConstraintLayout>